Correction couleur sur lien footer pour contrast AA et ajout specifique name au lien

--- a/style.css
+++ b/style.css
@@ -1057,3 +1057,6 @@ h4 {
     font-size: 1.5rem;
 }
 
+.link_name{
+    color: inherit;
+}
